--- a/ReactNative/app.json
+++ b/ReactNative/app.json
@@ -1,12 +1,13 @@
 {
   "expo": {
-    "name": "Porte",
-    "slug": "Porte",
+    "name": "integration",
+    "slug": "integration",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
+      "fontFamily": "Consolas",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
