--- a/ReactNative/app.json
+++ b/ReactNative/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Porte",
-    "slug": "Porte",
+    "name": "Integration",
+    "slug": "Integration",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
