--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
@@ -22,7 +23,8 @@
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.2"
+    "react-navigation": "^4.4.2",
+    "react-navigation-stack": "^2.8.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
