--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.2",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
