--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           whoami
-          mkdir /usr/src/teste
+          sudo mkdir /usr/src/teste
