vérif formulaire + début debugage envois de données backend
blocage formulaire en cas de problèmes + avancement envois de données et hashage

--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -4,6 +4,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "connect-pg-simple": "^6.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
