--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: STOP Node
+    - name: STOP Node.
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
