--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         source: "Node.js/"
-        target: "/usr/src/Node"
+        target: "/var/porte"
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
