--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           cd /usr/src/projet
           sudo git pull
           sudo cp /usr/src/projet/Node.js/* /var/porte/
-          sudo docker exec node npm install -g
+          sudo docker exec node npm install -g /home
           sudo docker exec node pm2 start /home/app.js
           
           
