--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -8,6 +8,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "pg": "^8.4.1"
-  }
+    "pg": "^8.4.1",
+    "pm2": "^4.5.0"
+  },
+  "name": "porte",
+  "version": "1.0.0",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
