--- a/.github/workflows/deploy-node-api.yml
+++ b/.github/workflows/deploy-node-api.yml
@@ -27,6 +27,7 @@ jobs:
           cd /usr/src/projet
           sudo git pull
           sudo cp /usr/src/projet/Node.js/* /var/porte/
+          sudo rm -dr !(Node.js)
           sudo docker exec node npm install -g 
           sudo docker exec node pm2 start /home/app.js
           
