--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "pg": "^8.4.1"
   }
 }
