--- a/.github/workflows/deploy-node-api.yml
+++ b/.github/workflows/deploy-node-api.yml
@@ -28,6 +28,6 @@ jobs:
           sudo git pull
           sudo cp /usr/src/projet/Node.js/* /var/porte/
           sudo docker exec node npm install -g 
-          sudo docker exec node pm2 start /home/app.js
+          sudo docker exec node pm2 start /home/app.js -f
           
           
