--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "react-navigation-stack": "^2.8.4"
   },
   "private": true
