--- a/Formation/package.json
+++ b/Formation/package.json
@@ -8,15 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-cli": "^3.27.14",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
+    "numeral": "^2.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-stack": "^1.0.0-alpha11",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
+    "react-navigation-stack": "^2.8.4",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
