Remise à niveau post merge

--- a/Formation/app.json
+++ b/Formation/app.json
@@ -1,13 +1,12 @@
 {
   "expo": {
-    "name": "Integration",
-    "slug": "Integration",
+    "name": "Porte",
+    "slug": "Porte",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "fontFamily": "Consolas",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
