--- a/Formation/package.json
+++ b/Formation/package.json
@@ -24,6 +24,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
     "react-navigation-stack": "^2.8.4",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
