--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "connect-pg-simple": "^6.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
