--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test" : "jest"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -14,10 +15,11 @@
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "AsyncStorage": "^0.1.5",
     "axios": "^0.21.0",
     "expo": "^39.0.3",
-    "AsyncStorage": "^0.1.5",
     "expo-status-bar": "~1.0.2",
+    "jest": "^26.6.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
@@ -35,6 +37,10 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-adapter-react-16.3": "^1.7.3",
+    "jest-enzyme": "^7.1.2",
     "react-navigation-stack": "^2.8.4"
   },
   "private": true
