--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -5,18 +5,26 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFiles": [
+      "./__tests__/jestSetup.js"
+    ]
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "AsyncStorage": "^0.1.5",
     "axios": "^0.21.0",
     "expo": "^39.0.3",
-    "AsyncStorage": "^0.1.5",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -30,7 +38,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
-    "react-navigation-stack": "^2.8.4"
+    "react-navigation-stack": "^2.8.4",
+    "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
