--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -11,7 +11,7 @@
   "jest": {
     "preset": "react-native",
     "setupFiles": [
-      "./__tests__/jestSetup.js"
+      "./jestSetup.js"
     ]
   },
   "dependencies": {
@@ -24,8 +24,13 @@
     "@react-navigation/stack": "^5.9.3",
     "AsyncStorage": "^0.1.5",
     "axios": "^0.21.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
+    "jest-enzyme": "^7.1.2",
+    "jsdom": "^16.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
