--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test" : "jest"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -25,6 +25,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-oauth": "^2.1.18",
+    "react-native-paper": "^4.3.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.10.0",
