--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -18,10 +18,13 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "^1.8.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-modals": "^0.19.9",
     "react-native-reanimated": "^1.13.1",
-    "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.11.0",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "^2.10.1",
+    "react-native-simple-dialogs": "^1.4.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
