--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -18,9 +19,11 @@
     "axios": "^0.21.0",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
+    "jest": "^26.6.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-oauth": "^2.1.18",
     "react-native-reanimated": "^1.13.1",
@@ -36,6 +39,9 @@
     "@babel/core": "~7.9.0",
     "@react-native-community/async-storage": "^1.12.1",
     "react-navigation-stack": "^2.8.4"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "private": true
 }
