--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-table-component": "^1.2.1",
+    "react-native-testing-library": "^6.0.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
