--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -5,11 +5,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "connect-pg-simple": "^6.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "pm2": "^4.5.0"
   }
 }
