--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.12.1",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/picker": "^1.6.6",
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
@@ -20,15 +20,18 @@
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "jest": "^26.6.3",
+    "react-native-blur": "^3.2.2",
+    "modal-react-native-web": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-blur": "^3.2.2",
-    "react-native-gesture-handler": "^1.8.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-oauth": "^2.1.18",
+    "react-native-paper": "^4.3.1",
     "react-native-reanimated": "^1.13.1",
-    "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.11.0",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "~2.10.0",
+    "react-native-simple-dialogs": "^1.4.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
@@ -38,6 +41,10 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-adapter-react-16.3": "^1.7.3",
+    "jest-enzyme": "^7.1.2",
     "react-navigation-stack": "^2.8.4"
   },
   "jest": {
