--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.6",
@@ -30,13 +31,13 @@
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "jest": "^26.6.3",
-    "react-native-blur": "^3.2.2",
-    "modal-react-native-web": "^0.2.0",
     "jest-enzyme": "^7.1.2",
     "jsdom": "^16.4.0",
+    "modal-react-native-web": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-oauth": "^2.1.18",
     "react-native-paper": "^4.3.1",
