--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -11,6 +11,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
+    "nodemailer": "^6.4.16",
+    "password": "^0.1.1",
     "pg": "^8.4.1",
     "pm2": "^4.5.0"
   }
