--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -10,7 +10,11 @@
     "test:utils": "jest -i __tests__/utils.ajoutPorte.test.js --collect-coverage"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "testEnvironment": "jsdom",
+    "setupFiles": [
+      "./jestSetup.js"
+    ]
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -27,6 +31,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "expo": "^39.0.3",
+    "expo-cli": "^3.28.5",
     "expo-status-bar": "~1.0.2",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
