--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -7,14 +7,10 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --collect-coverage",
-    "test:utils" : "jest -i __tests__/utils.ajoutPorte.test.js --collect-coverage"
+    "test:utils": "jest -i __tests__/utils.ajoutPorte.test.js --collect-coverage"
   },
   "jest": {
-    "preset": "react-native",
-    "testEnvironment": "jsdom",
-    "setupFiles": [
-      "./jestSetup.js"
-    ]
+    "preset": "react-native"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -30,7 +26,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "expo": "^39.0.3",
+    "expo": "^39.0.4",
     "expo-status-bar": "~1.0.2",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
@@ -64,8 +60,5 @@
     "jest-enzyme": "^7.1.2",
     "react-navigation-stack": "^2.8.4"
   },
-  "private": true,
-  "jest" : {
-    "preset" : "react-native"
-  }
+  "private": true
 }
