--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -28,7 +28,6 @@
     "enzyme-to-json": "^3.6.1",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
-    "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
     "jsdom": "^16.4.0",
     "modal-react-native-web": "^0.2.0",
@@ -36,7 +35,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-blur": "^3.2.2",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-oauth": "^2.1.18",
     "react-native-paper": "^4.3.1",
     "react-native-reanimated": "^1.13.1",
@@ -58,6 +57,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-adapter-react-16.3": "^1.7.3",
+    "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-native-dotenv": "^2.4.2",
