--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -7,6 +7,7 @@
     "argon2": "^0.27.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "chance": "^1.1.7",
     "connect-pg-simple": "^6.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
