--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -10,11 +10,7 @@
     "test:utils": "jest -i __tests__/utils.ajoutPorte.test.js --collect-coverage"
   },
   "jest": {
-    "preset": "react-native",
-    "testEnvironment": "jsdom",
-    "setupFiles": [
-      "./jestSetup.js"
-    ]
+    "preset": "react-native"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -30,8 +26,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "expo": "^39.0.3",
-    "expo-cli": "^3.28.5",
+    "expo": "^39.0.5",
     "expo-status-bar": "~1.0.2",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
