--- a/.github/workflows/deploy-node-api.yml
+++ b/.github/workflows/deploy-node-api.yml
@@ -26,7 +26,7 @@ jobs:
           sudo docker exec node pm2 stop /home/app.js
           cd /usr/src/projet
           sudo git pull
-          sudo cp /usr/src/projet/Node.js/* /var/porte/
+          sudo cp /usr/src/projet/Node.js/* /var/porte/ -r
           sudo docker exec node npm install -g 
           sudo docker exec node pm2 start /home/app.js -f
           
