--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "AsyncStorage": "^0.1.5",
+    "analytics-node": "^3.4.0-beta.3",
     "axios": "^0.21.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
