--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,16 +2,32 @@ version : '2'
 
 services :
 
+    postgresqldb :
+        build : "./Postgre"
+        container_name:  postgresqldb
+        tty : true
+        volumes:
+         - /home/projet/sql:/var/lib/postgresql/data
+        ports :
+         - "5432:5432"
+        environment:
+         POSTGRES_PASSWORD: zGwgD4he37QvL7YY
+         POSTGRES_USER : postgresArnaud
+        networks:
+            integration6:
+                ipv4_address: 172.18.0.2
+
+
     node:
-        build : "."
+        build : "./Node"
         container_name: node
         tty: true
         volumes:
-         - /var/porte/:/home
-        working_dir : /home
+         - /home/projet/node/:/home/projet
         ports:
          - "8081:8081"
-         - "4433:4433"
+        depends_on :
+         - postgresqldb
         networks:
             integration6:
                 ipv4_address: 172.18.0.3
