--- a/Docker/Node/Dockerfile
+++ b/Docker/Node/Dockerfile
@@ -6,9 +6,7 @@ RUN apt-get update
 
 RUN mkdir /home/clone
 
-RUN cd /home/clone
-
-RUN git clone https://github.com/GonoGoat/projetIntegrationGrp6
+RUN cd /home/clone && git clone https://github.com/GonoGoat/projetIntegrationGrp6
 
 RUN cp /home/clone/projetIntegrationGrp6/Node.js/* /home/projet -r
 
