--- a/ReactNative/package.json
+++ b/ReactNative/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^5.12.8",
     "AsyncStorage": "^0.1.5",
     "analytics-node": "^3.4.0-beta.3",
+    "async-storage": "^0.1.0",
     "axios": "^0.21.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
